--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-row-reverse">
                     <partial name="_LoginPartial"/>
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item pt-lg-1">
@@ -27,6 +27,11 @@
                         </li>
                         <li class="nav-item pt-lg-1">
                             <a class="nav-link" asp-area="" asp-controller="Product" asp-action="ProductIndex">Products</a>
+                        </li>
+                        <li class="nav-item pt-lg-1">
+                            <a class="nav-link" asp-area="" asp-controller="Cart" asp-action="CartIndex">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
