--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -53,6 +53,15 @@
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/bootstrap-datetimepicker.js"></script>
+    <script>
+        function increment() {
+            document.getElementById('demoInput').stepUp();
+        }
+        function decrement() {
+            document.getElementById('demoInput').stepDown();
+        }
+    </script>
+    
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
